# lab1-serialcomm

./: Final_Arduino_Code.ino  LICENSE  README.md  main.py  pyproject.toml  tinkr.py  tinkr.py.save
firmware/: sensor_transmitter.ino
src/serial_monitor/: data_processing.py  main.py  serial_handler.py  test_basic.py  utils.py
